# claudestine

./: .gitignore  LICENSE  README.md  pyproject.toml
.claude/commands/: research_codebase.md
src/claudestine/: __init__.py  __main__.py  cli.py  config.py  logging.py  models.py  orchestrator.py  runner.py  tui.py  workflow.py
src/claudestine/parsers/: __init__.py  plan.py
src/claudestine/ui/: __init__.py  console.py  keyboard.py
tests/: __init__.py
tests/fixtures/: __init__.py  hello.py  test-plan.md  test_hello.py
workflows/: create_plan.yaml  default.yaml
