[project]
name = "claudestine"
version = "0.1.0"
description = "Automated plan implementation orchestrator for Claude Code"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "textual>=3.0.0",
    "rich>=13.0.0",
    "pydantic>=2.0.0",
    "click>=8.0.0",
]

[project.scripts]
claudestine = "claudestine.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/claudestine"]
