[project]
name = "claudestine"
version = "0.2.0"
description = "Automated plan implementation orchestrator for Claude Code"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "typer>=0.12.0",
    "rich>=13.0.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "pyyaml>=6.0.0",
    "editor>=1.6.0",
]

[project.scripts]
claudestine = "claudestine.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/claudestine"]

[dependency-groups]
dev = [
    "pytest>=9.0.0",
]
