[project]
name = "claudestine"
version = "0.2.0"
description = "Automated plan implementation orchestrator for Claude Code"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "typer>=0.12.0",
    "rich>=13.0.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "pyyaml>=6.0.0",
    "editor>=1.6.0",
    "questionary>=2.0.0",
    "pynput>=1.7.6",
]

[project.scripts]
claudestine = "claudestine.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/claudestine"]

[dependency-groups]
dev = [
    "pytest>=9.0.0",
    "mypy>=1.0.0",
    "ruff>=0.6.0",
    "types-pyyaml>=6.0.12.20250915",
    "types-pynput>=1.8.1.20250809",
]
